Fix header for spacing anf style

--- a/src/popup/header.scss
+++ b/src/popup/header.scss
@@ -2,4 +2,13 @@
   height: 25px;
   margin: 5px;
   width: 25px;
+  display: inline-flex;
+}
+
+.right {
+  display: flex;
+}
+
+.grow {
+  flex-grow: 1;
 }
